--- a/client/public/css/global.css
+++ b/client/public/css/global.css
@@ -6,3 +6,17 @@ body {
 button {
     font-family: inherit;
 }
+
+
+/* 
+Fresh: #4ABDAC – Once again the color overlaid over the photographic elements provides a classy modern touch
+
+Vermillion: #FC4A1A – A figure in the foreground is worked into the context, still paying attention to how it
+ complements the overall structure of the design. In fact one might 
+ even be able to surmise that the design was down around this figure. 
+
+Sunshine: #F7B733 – The Yellow provides only a juxtaposed 
+all to action and highlights imporant parts
+
+Clean: #DFDCE3 – Clean grey, utilized in the photograph, k
+eeps the structure un-encomberred by more colors or patterns in these sharp headshots. */
